all Security lessons completed